--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "sonner": "^1.7.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
